# Spinner

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
Assets/Shaders/: _compile.bat  _compile.sh  lighting.glsl  pbr.frag  pbr.glsl  pbr.vert  scene.glsl  staticmesh.frag  staticmesh.vert  test.frag  test.vert
Shaders/: lighting.glsl  pbr.glsl  scene.glsl  staticmesh.frag  staticmesh.vert  staticshadow.frag  staticshadow.vert
Spinner/: App.cpp  App.hpp  Buffer.cpp  Buffer.hpp  Callback.hpp  CommandBuffer.cpp  CommandBuffer.hpp  Constants.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  DrawCommand.cpp  DrawCommand.hpp  DrawManager.cpp  DrawManager.hpp  GLM.hpp  Graphics.cpp  Graphics.hpp  ImGuiInstance.cpp  ImGuiInstance.hpp  Image.cpp  Image.hpp  Implementations.cpp  Input.cpp  Input.hpp  Key.hpp  Light.cpp  Light.hpp  Lighting.cpp  Lighting.hpp  Material.cpp  Material.hpp  MeshBuffer.cpp  MeshBuffer.hpp  MeshBuilder.cpp  MeshBuilder.hpp  Object.hpp  Passes.hpp  QueueFamilyIndices.hpp  (+30 more)
Spinner/Components/: CameraComponent.cpp  CameraComponent.hpp  CameraControllerComponent.cpp  CameraControllerComponent.hpp  Component.cpp  Component.hpp  Components.hpp  LightComponent.cpp  LightComponent.hpp  MeshComponent.cpp  MeshComponent.hpp
Spinner/Extra/: AlignedAllocator.hpp
Spinner/MeshData/: StaticMeshVertex.cpp  StaticMeshVertex.hpp
SpinnerApp/: SpinnerApp.cpp  SpinnerApp.hpp  main.cpp
cmake/: Assets.cmake  Shaders.cmake
